--- a/Index/二叉树.md
+++ b/Index/二叉树.md
@@ -13,6 +13,7 @@
 | [654. 最大二叉树](https://leetcode.cn/problems/maximum-binary-tree/) | [LeetCode 题解链接](https://leetcode.cn/problems/maximum-binary-tree/solution/by-ac_oier-s0wc/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [655. 输出二叉树](https://leetcode.cn/problems/print-binary-tree/) | [LeetCode 题解链接](https://leetcode.cn/problems/print-binary-tree/solution/by-ac_oier-mays/) | 中等 | 🤩🤩🤩🤩     |
 | [662. 二叉树最大宽度](https://leetcode.cn/problems/maximum-width-of-binary-tree/) | [LeetCode 题解链接](https://leetcode.cn/problems/maximum-width-of-binary-tree/solution/by-ac_oier-33er/) | 中等 | 🤩🤩🤩🤩🤩    |
+| [687. 最长同值路径](https://leetcode.cn/problems/longest-univalue-path/) | [LeetCode 题解链接](https://leetcode.cn/problems/longest-univalue-path/solution/by-ac_oier-8ue8/) | 中等 | 🤩🤩🤩🤩     |
 | [783. 二叉搜索树节点最小距离](https://leetcode-cn.com/problems/minimum-distance-between-bst-nodes/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/minimum-distance-between-bst-nodes/solution/gong-shui-san-xie-yi-ti-san-jie-shu-de-s-7r17/) | 简单 | 🤩🤩🤩      |
 | [814. 二叉树剪枝](https://leetcode.cn/problems/binary-tree-pruning/) | [LeetCode 题解链接](https://leetcode.cn/problems/binary-tree-pruning/solution/by-ac_oier-7me9/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [863. 二叉树中所有距离为 K 的结点](https://leetcode-cn.com/problems/all-nodes-distance-k-in-binary-tree/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/all-nodes-distance-k-in-binary-tree/solution/gong-shui-san-xie-yi-ti-shuang-jie-jian-x6hak/) | 中等 | 🤩🤩🤩🤩     |
