--- a/LeetCode/511-520/517. 超级洗衣机（困难）.md
+++ b/LeetCode/511-520/517. 超级洗衣机（困难）.md
@@ -42,9 +42,9 @@ Tag : 「贪心算法」
 ```
 
 提示：
-* n == machines.length
-* 1 <= n <= $10^4$
-* 0 <= machines[i] <= $10^5$
+* $n = machines.length$
+* $1 <= n <= 10^4$
+* $0 <= machines[i] <= 10^5$
 
 ---
 
