--- a/Index/排序.md
+++ b/Index/排序.md
@@ -14,6 +14,7 @@
 | [581. 最短无序连续子数组](https://leetcode-cn.com/problems/shortest-unsorted-continuous-subarray/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/shortest-unsorted-continuous-subarray/solution/gong-shui-san-xie-yi-ti-shuang-jie-shuan-e1le/) | 中等 | 🤩🤩🤩🤩     |
 | [611. 有效三角形的个数](https://leetcode-cn.com/problems/valid-triangle-number/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/valid-triangle-number/solution/gong-shui-san-xie-yi-ti-san-jie-jian-dan-y1we/) | 中等 | 🤩🤩🤩🤩     |
 | [645. 错误的集合](https://leetcode-cn.com/problems/set-mismatch/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/set-mismatch/solution/gong-shui-san-xie-yi-ti-san-jie-ji-shu-s-vnr9/) | 简单 | 🤩🤩🤩      |
+| [646. 最长数对链](https://leetcode.cn/problems/maximum-length-of-pair-chain/) | [LeetCode 题解链接](https://leetcode.cn/problems/maximum-length-of-pair-chain/solution/by-ac_oier-z91l/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [703. 数据流中的第 K 大元素](https://leetcode-cn.com/problems/kth-largest-element-in-a-stream/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/kth-largest-element-in-a-stream/solution/jian-da-ti-de-duo-chong-jie-fa-mou-pao-p-d1qi/) | 简单 | 🤩🤩🤩      |
 | [825. 适龄的朋友](https://leetcode-cn.com/problems/friends-of-appropriate-ages/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/friends-of-appropriate-ages/solution/gong-shui-san-xie-yi-ti-shuang-jie-pai-x-maa8/) | 中等 | 🤩🤩🤩🤩     |
 | [937. 重新排列日志文件](https://leetcode-cn.com/problems/reorder-data-in-log-files/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/reorder-data-in-log-files/solution/by-ac_oier-ap28/) | 简单 | 🤩🤩🤩🤩🤩    |
