--- a/LeetCode/1581-1590/1582. 二进制矩阵中的特殊位置（简单）.md
+++ b/LeetCode/1581-1590/1582. 二进制矩阵中的特殊位置（简单）.md
@@ -71,10 +71,9 @@ class Solution {
         int n = mat.length, m = mat[0].length, ans = 0;
         int[] r = new int[n], c = new int[m];
         for (int i = 0; i < n; i++) {
-            for (int j = 0; j < m; j++) r[i] += mat[i][j];
-        }
-        for (int i = 0; i < m; i++) {
-            for (int j = 0; j < n; j++) c[i] += mat[j][i];
+            for (int j = 0; j < m; j++) {
+                r[i] += mat[i][j]; c[j] += mat[i][j];
+            }
         }
         for (int i = 0; i < n; i++) {
             for (int j = 0; j < m; j++) {
@@ -91,10 +90,9 @@ function numSpecial(mat: number[][]): number {
     let n = mat.length, m = mat[0].length, ans = 0
     const r = new Array<number>(n).fill(0), c = new Array<number>(m).fill(0)
     for (let i = 0; i < n; i++) {
-        for (let j = 0; j < m; j++) r[i] += mat[i][j]
-    }
-    for (let i = 0; i < m; i++) {
-        for (let j = 0; j < n; j++) c[i] += mat[j][i]
+        for (let j = 0; j < m; j++) {
+            r[i] += mat[i][j]; c[j] += mat[i][j]
+        }
     }
     for (let i = 0; i < n; i++) {
         for (let j = 0; j < m; j++) {
