--- a/LeetCode/821-830/828. 统计子串中的唯一字符（困难）.md
+++ b/LeetCode/821-830/828. 统计子串中的唯一字符（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[828. 统计子串中的唯一字符](https://leetcode.cn/problems/count-unique-characters-of-all-substrings-of-a-given-string/solution/by-ac_oier-922k/)** ，难度为 **困难**。
 
-Tag : 「模拟」、「数学」
+Tag : 「模拟」、「数学」、「线性 DP」
 
 
 
@@ -107,6 +107,59 @@ function uniqueLetterString(s: string): number {
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(n)$
+
+---
+
+### 线性 DP
+
+另外一个实现思路是利用「动态规划」思想。
+
+定义 $f[i]$ 为考虑以 $s[i]$ 为结尾的所有子串中的唯一字符个数。
+
+不失一般性考虑 $f[i]$ 该如何转移：以 $s[i]$ 为结尾的子串包括在所有以 $s[i - 1]$ 为结尾的子串结尾添加一个字符而来，以及 $s[i]$ 字符本身组成的新子串。
+
+首先我们令 $f[i] = f[i - 1]$，同时使用 $b[x]$ 记录字符 $x$ 前一次出现的下标，使用 $a[x]$ 记录字符 $x$ 在上上次出现的下标，然后假设当前处理的字符为 $c = s[i]$，考虑 $s[i]$ 对 $f[i]$ 的影响（注意 $s[i]$ 始终为子串右端点）：
+
+* 在子串左端点下标范围在 $[b[c] + 1, i]$ 的子串中，$s[i]$ 必然只出现一次（满足唯一字符要求），即可增加 $i - b[c]$ 个唯一字符 $s[i]$；
+* 在子串左端点下标范围在 $[a[c] + 1, b[c]]$ 的子串中，原本位于 $b[c]$ 的字符在新子串中出现次数变为 $2$ 次（不再满足唯一字符要求），即需减少 $b[c] - a[c]$ 个唯一字符 $s[i]$。
+
+综上，我们有状态转移方程：$f[i] = f[i - 1] + (i - b[s[i]]) - (b[s[i]] - a[s[i]])$
+
+实现上，由于 $f[i]$ 只依赖于 $f[i - 1]$，因此我们真的无须创建动规数组，而只需要使用单个变量 `cur` 来记录当前处理到的 $f[i]$ 即可，累积所有的 $f[i]$ 即是答案。
+
+Java 代码：
+```Java
+class Solution {
+    public int uniqueLetterString(String s) {
+        int n = s.length(), ans = 0, cur = 0;
+        int[] a = new int[26], b = new int[26];
+        Arrays.fill(a, -1); Arrays.fill(b, -1);
+        for (int i = 0; i < n; i++) {
+            int u = s.charAt(i) - 'A';
+            cur += i - b[u] - (b[u] - a[u]);
+            ans += cur;
+            a[u] = b[u]; b[u] = i;
+        }
+        return ans;
+    }
+}
+```
+TypeScript 代码：
+```TypeScript
+function uniqueLetterString(s: string): number {
+    let n = s.length, ans = 0, cur = 0
+    const a = new Array<number>(26).fill(-1), b = new Array<number>(26).fill(-1)
+    for (let i = 0; i < n; i++) {
+        const u = s.charCodeAt(i) - 65
+        cur += i - b[u] - (b[u] - a[u])
+        ans += cur
+        a[u] = b[u]; b[u] = i
+    }
+    return ans
+};
+```
+* 时间复杂度：$O(n)$
+* 空间复杂度：$O(C)$，其中 $C = 26$ 为字符集大小
 
 ---
 
