--- a/Index/找规律.md
+++ b/Index/找规律.md
@@ -4,4 +4,5 @@
 | [419. 甲板上的战舰](https://leetcode-cn.com/problems/battleships-in-a-board/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/battleships-in-a-board/solution/gong-shui-san-xie-ji-chong-sao-miao-xian-trmc/) | 中等 | 🤩🤩🤩🤩     |
 | [423. 从英文中重建数字](https://leetcode-cn.com/problems/reconstruct-original-digits-from-english/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/reconstruct-original-digits-from-english/solution/gong-shui-san-xie-nao-jin-ji-zhuan-wan-m-vg7a/) | 中等 | 🤩🤩🤩🤩     |
 | [440. 字典序的第K小数字](https://leetcode-cn.com/problems/k-th-smallest-in-lexicographical-order/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/k-th-smallest-in-lexicographical-order/solution/by-ac_oier-m3zl/) | 困难 | 🤩🤩🤩      |
+| [672. 灯泡开关 Ⅱ](https://leetcode.cn/problems/bulb-switcher-ii/) | [LeetCode 题解链接](https://leetcode.cn/problems/bulb-switcher-ii/solution/by-ac_oier-3ttx/) | 中等 | 🤩🤩🤩🤩🤩    |
 
