--- a/LeetCode/671-680/672. 灯泡开关 Ⅱ（中等）.md
+++ b/LeetCode/671-680/672. 灯泡开关 Ⅱ（中等）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[672. 灯泡开关 Ⅱ](https://leetcode.cn/problems/bulb-switcher-ii/solution/by-ac_oier-3ttx/)** ，难度为 **中等**。
 
-Tag : 「脑筋急转弯」
+Tag : 「脑筋急转弯」、「找规律」
 
 
 
