--- a/LeetCode/671-680/672. 灯泡开关 Ⅱ（中等）.md
+++ b/LeetCode/671-680/672. 灯泡开关 Ⅱ（中等）.md
@@ -92,6 +92,19 @@ function flipLights(n: number, k: number): number {
     else return k == 1 ? 4 : k == 2 ? 7 : 8;
 };
 ```
+Python 3 代码：
+```Python
+class Solution:
+    def flipLights(self, n: int, k: int) -> int:
+        if k == 0:
+            return 1
+        if n == 1:
+            return 2
+        elif n == 2:
+            return 3 if k == 1 else 4
+        else:
+            return 4 if k == 1 else 7 if k == 2 else 8
+```
 * 时间复杂度：$O(1)$
 * 空间复杂度：$O(1)$
 
