--- a/LeetCode/1621-1630/1622. 奇妙序列（困难）.md
+++ b/LeetCode/1621-1630/1622. 奇妙序列（困难）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[1629. 按键持续时间最长的键](https://leetcode-cn.com/problems/slowest-key/solution/gong-shui-san-xie-jian-dan-mo-ni-ti-by-a-zjwb/)** ，难度为 **困难**。
+这是 LeetCode 上的 **[1622. 奇妙序列]()** ，难度为 **困难**。
 
 Tag : 「线段树」
 
@@ -49,7 +49,7 @@ fancy.getIndex(2); // 返回 20
 
 ### 线段树（多个懒标记）
 
-
+使用多个懒标记来解决 `add` 和 `mul` 问题。
 
 代码：
 ```Java
@@ -136,7 +136,7 @@ class Fancy {
 }
 ```
 * 时间复杂度：查询次数为 $m$，值域大小为 $n$，插入和查询复杂度均为 $O(\log{n})$
-* 空间复杂度：$O(m * \log{n})$
+* 空间复杂度：$O(m \times \log{n})$
 
 ---
 
