--- a/LeetCode/1091-1100/1092. 最短公共超序列（困难）.md
+++ b/LeetCode/1091-1100/1092. 最短公共超序列（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[1092. 最短公共超序列](https://leetcode.cn/problems/shortest-common-supersequence/solution/by-ac_oier-s346/)** ，难度为 **困难**。
 
-Tag : 「序列 DP」、「LCS」、「最长上升子序列」、「动态规划」、「构造」、「双指针」
+Tag : 「序列 DP」、「LCS」、「最长公共子序列」、「动态规划」、「构造」、「双指针」
 
 
 
