--- a/LeetCode/821-830/827. 最大人工岛（困难）.md
+++ b/LeetCode/821-830/827. 最大人工岛（困难）.md
@@ -66,8 +66,8 @@ Tag : 「并查集」、「枚举」
 Java 代码：
 ```Java
 class Solution {
-    int N = 510;
-    int[] p = new int[N * N], sz = new int[N * N];
+    static int N = 510;
+    static int[] p = new int[N * N], sz = new int[N * N];
     int[][] dirs = new int[][]{{1,0},{-1,0},{0,1},{0,-1}};
     int find(int x) {
         if (p[x] != x) p[x] = find(p[x]);
