--- a/LeetCode/511-520/517. 超级洗衣机（困难）.md
+++ b/LeetCode/511-520/517. 超级洗衣机（困难）.md
@@ -2,7 +2,9 @@
 
 这是 LeetCode 上的 **[517. 超级洗衣机](https://leetcode-cn.com/problems/super-washing-machines/solution/gong-shui-san-xie-noxiang-xin-ke-xue-xi-mzqia/)** ，难度为 **困难**。
 
-Tag : 「贪心算法」
+Tag : 「贪心」
+
+
 
 假设有 `n` 台超级洗衣机放在同一排上。开始的时候，每台洗衣机内可能有一定量的衣服，也可能是空的。
 
