--- a/LeetCode/561-570/561. 数组拆分 I（简单）.md
+++ b/LeetCode/561-570/561. 数组拆分 I（简单）.md
@@ -2,12 +2,12 @@
 
 这是 LeetCode 上的 **[561. 数组拆分 I](https://leetcode-cn.com/problems/array-partition-i/solution/jue-dui-neng-kan-dong-de-zheng-ming-fan-f7trz/)** ，难度为 **简单**。
 
-Tag : 「贪心算法」
+Tag : 「贪心」
 
 
 
 
-给定长度为 2n 的整数数组 nums ，你的任务是将这些数分成 n 对, 例如 (a1, b1), (a2, b2), ..., (an, bn) ，使得从 1 到 n 的 min(ai, bi) 总和最大。
+给定长度为 $2 \times n$ 的整数数组 `nums `，你的任务是将这些数分成 `n` 对, 例如 $(a_1, b_1), (a_2, b_2), ..., (a_n, b_n)$ ，使得从 `1` 到 `n` 的 $min(a_i, b_i)$ 总和最大。
 
 返回该 最大总和 。
 
@@ -30,9 +30,9 @@ Tag : 「贪心算法」
 ```
 
 提示：
-* 1 <= n <= $10^4$
-* nums.length == 2 * n
-* -$10^4$ <= nums[i] <= $10^4$
+* $1 <= n <= 10^4$
+* $nums.length = 2 \times n$
+* $-10^4 <= nums[i] <= 10^4$
 
 ---
 
