--- a/LeetCode/781-790/781. 森林中的兔子（中等）.md
+++ b/LeetCode/781-790/781. 森林中的兔子（中等）.md
@@ -2,11 +2,11 @@
 
 这是 LeetCode 上的 **[781. 森林中的兔子](https://leetcode-cn.com/problems/rabbits-in-forest/solution/gong-shui-san-xie-noxiang-xin-ke-xue-xi-v17p5/)** ，难度为 **中等**。
 
-Tag : 「贪心算法」
+Tag : 「贪心」
 
 
 
-森林中，每个兔子都有颜色。其中一些兔子（可能是全部）告诉你还有多少其他的兔子和自己有相同的颜色。我们将这些回答放在 answers 数组里。
+森林中，每个兔子都有颜色。其中一些兔子（可能是全部）告诉你还有多少其他的兔子和自己有相同的颜色。我们将这些回答放在 `answers` 数组里。
 
 返回森林中兔子的最少数量。
 
@@ -31,8 +31,8 @@ Tag : 「贪心算法」
 ```
 
 说明:
-* answers 的长度最大为1000。
-* answers[i] 是在 [0, 999] 范围内的整数。
+* `answers` 的长度最大为 $1000$
+* `answers[i]` 是在 $[0, 999]$ 范围内的整数。
 
 ---
 
