--- a/Index/贪心算法.md
+++ b/Index/贪心算法.md
@@ -15,6 +15,7 @@
 | [575. 分糖果](https://leetcode-cn.com/problems/distribute-candies/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/distribute-candies/solution/gong-shui-san-xie-noxiang-xin-ke-xue-xi-pjjxo/) | 简单 | 🤩🤩🤩🤩     |
 | [630. 课程表 III](https://leetcode-cn.com/problems/course-schedule-iii/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/course-schedule-iii/solution/gong-shui-san-xie-jing-dian-tan-xin-yun-ghii2/) | 困难 | 🤩🤩🤩🤩     |
 | [646. 最长数对链](https://leetcode.cn/problems/maximum-length-of-pair-chain/) | [LeetCode 题解链接](https://leetcode.cn/problems/maximum-length-of-pair-chain/solution/by-ac_oier-z91l/) | 中等 | 🤩🤩🤩🤩🤩    |
+| [698. 划分为k个相等的子集](https://leetcode.cn/problems/partition-to-k-equal-sum-subsets/) | [LeetCode 题解链接](https://leetcode.cn/problems/partition-to-k-equal-sum-subsets/solution/by-ac_oier-mryw/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [757. 设置交集大小至少为2](https://leetcode.cn/problems/set-intersection-size-at-least-two/) | [LeetCode 题解链接](https://leetcode.cn/problems/set-intersection-size-at-least-two/solution/by-ac_oier-3xn6/) | 困难 | 🤩🤩🤩🤩     |
 | [765. 情侣牵手](https://leetcode-cn.com/problems/couples-holding-hands/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/couples-holding-hands/solution/liang-chong-100-de-jie-fa-bing-cha-ji-ta-26a6/) | 困难 | 🤩🤩🤩      |
 | [768. 最多能完成排序的块 II](https://leetcode.cn/problems/max-chunks-to-make-sorted-ii/) | [LeetCode 题解链接](https://leetcode.cn/problems/max-chunks-to-make-sorted-ii/solution/by-ac_oier-z4wt/) | 困难 | 🤩🤩🤩🤩🤩    |
