--- a/LeetCode/851-860/854. 相似度为 K 的字符串（困难）.md
+++ b/LeetCode/851-860/854. 相似度为 K 的字符串（困难）.md
@@ -33,7 +33,7 @@ Tag : 「启发式搜索」、「AStar 算法」
 
 ### AStar 算法
 
-问题本质为将 `s1` 转换为 `s2` 的最小操作次数，由于题目确保了 `s1` 和 `s2` 互为字母异位词（必然有解），因此最好的求解方式是使用 AStar 算法。
+由于题目确保了 `s1` 和 `s2` 互为字母异位词（必然有解），因此最好的求解方式是使用 AStar 算法。
 
 可直接根据本题规则来设计 AStar 的启发式函数: 对于两个状态 `a` 和 `b` 直接计算出「理论最小转换次数」: **不同字符串的转换成本之和，由于每一次交换最多可减少两个不同的字符，我们可计算 `a` 与 `b` 的不同字符数量 $ans$，对应的理论最小转换次数为 $\left \lfloor \frac{ans + 1}{2} \right \rfloor$。**
 
@@ -69,15 +69,14 @@ class Solution {
             int idx = 0;
             while (idx < n && cs[idx] == t.charAt(idx)) idx++;
             for (int i = idx + 1; i < n; i++) {
-                if (cs[i] == t.charAt(idx) && cs[i] != t.charAt(i)) {
-                    swap(cs, idx, i);
-                    String nstr = String.valueOf(cs);
-                    if (map.containsKey(nstr) && map.get(nstr) <= step + 1) continue;
-                    if (nstr.equals(t)) return step + 1;
-                    map.put(nstr, step + 1);
-                    pq.add(nstr);
-                    swap(cs, idx, i);
-                }
+                if (cs[i] != t.charAt(idx) || cs[i] == t.charAt(i)) continue;
+                swap(cs, idx, i);
+                String nstr = String.valueOf(cs);
+                swap(cs, idx, i);
+                if (map.containsKey(nstr) && map.get(nstr) <= step + 1) continue;
+                if (nstr.equals(t)) return step + 1;
+                map.put(nstr, step + 1);
+                pq.add(nstr);
             }
         }
         return -1; // never
