✨feat: add 面试题 01.02

--- a/LeetCode/371-380/373. 查找和最小的K对数字（中等）.md
+++ b/LeetCode/371-380/373. 查找和最小的K对数字（中等）.md
@@ -78,7 +78,7 @@ $$
 
 可通过「反证法」证明，每次这样的「取当前，放入下一位」的操作，可以确保当前未被加入答案的所有点对的最小值必然在优先队列（堆）中，即前 $k$ 个出堆的元素必然是所有点对的前 $k$ 小的值。
 
-**代码（感谢 [@Benhao](/u/himymben/) 同学提供的其他语言版本）：**
+Java 代码：
 ```Java
 class Solution {
     boolean flag = true;
@@ -101,7 +101,7 @@ class Solution {
     }
 }
 ```
--
+Python3 代码：
 ```Python3
 class Solution:
     def kSmallestPairs(self, nums1: List[int], nums2: List[int], k: int) -> List[List[int]]:
@@ -118,7 +118,7 @@ class Solution:
                 heapq.heappush(pq, (nums1[a] + nums2[b + 1], a, b + 1))
         return ans
 ```
--
+Golang 代码：
 ```Golang
 func kSmallestPairs(nums1 []int, nums2 []int, k int) [][]int {
     n, m, ans := len(nums1), len(nums2), [][]int{}
@@ -156,7 +156,7 @@ func (h hp) Swap(i, j int)       { h[i], h[j] = h[j], h[i] }
 func (h *hp) Push(v interface{}) { *h = append(*h, v.([]int)) }
 func (h *hp) Pop() interface{}   { a := *h; v := a[len(a)-1]; *h = a[:len(a)-1]; return v }
 ```
-* 时间复杂度：令 $M$ 为 $n$、$m$ 和 $k$ 三者中的最小值，复杂度为 $O(M + k) * \log{M})$
+* 时间复杂度：令 $M$ 为 $n$、$m$ 和 $k$ 三者中的最小值，复杂度为 $O(M + k) \times \log{M})$
 * 空间复杂度：$O(M)$
 
 ---
@@ -182,7 +182,7 @@ func (h *hp) Pop() interface{}   { a := *h; v := a[len(a)-1]; *h = a[:len(a)-1];
 
 最后，在所有处理过程中，我们都可以利用答案数组的大小与 $k$ 的关系做剪枝。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     int[] nums1, nums2;
@@ -245,7 +245,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：假设点对和的值域大小范围为 $M$，第一次二分的复杂度为 $O((n * m) * \log{M})$；统计点对和值小于目标值 $x$ 的复杂度为 $O(n * m)$；统计所有点对和等于目标值的复杂度为 $O(\max(n * \log{m}, k))$（整个处理过程中利用了大小关系做了剪枝，大多循环都不会跑满，实际计算量会比理论分析的要低）
+* 时间复杂度：假设点对和的值域大小范围为 $M$，第一次二分的复杂度为 $O((n \times m) \times \log{M})$；统计点对和值小于目标值 $x$ 的复杂度为 $O(n \times m)$；统计所有点对和等于目标值的复杂度为 $O(\max(n \times \log{m}, k))$（整个处理过程中利用了大小关系做了剪枝，大多循环都不会跑满，实际计算量会比理论分析的要低）
 * 空间复杂度：$O(k)$
 
 ---
