--- a/LeetCode/261-270/263. 丑数（简单）.md
+++ b/LeetCode/261-270/263. 丑数（简单）.md
@@ -4,11 +4,11 @@
 
 Tag : 「数学」、「模拟」
 
-给你一个整数 n ，请你判断 n 是否为 丑数 。如果是，返回 true ；否则，返回 false 。
 
-丑数 就是只包含质因数 2、3 和/或 5 的正整数。
 
- 
+给你一个整数 `n` ，请你判断 n 是否为 丑数 。如果是，返回 `true` ；否则，返回 `false` 。
+
+丑数 就是只包含质因数 `2`、`3` 和 `5` 的正整数。
 
 示例 1：
 ```
@@ -44,7 +44,7 @@ Tag : 「数学」、「模拟」
 ```
 
 提示：
-* -$2^{31}$ <= n <= $2^{31}$ - 1
+* $-2^{31} <= n <= 2^{31} - 1$
 
 ---
 
@@ -52,10 +52,10 @@ Tag : 「数学」、「模拟」
 
 输入范围是 $-2^{31} <= n <= 2^{31} - 1$，我们只需要对输入进行分情况讨论即可：
 
-* 如果 $n$ 不是正整数（即小于等于 0）：必然不是丑数，直接返回 false。
-* 如果 $n$ 是正整数：我们对 $n$ 执行 2 3 5 的整除操作即可，直到 $n$ 被除干净，如果 $n$ 最终为 1 说明是丑数，否则不是丑数。
+* 如果 $n$ 不是正整数（即小于等于 0）：必然不是丑数，直接返回 `false`。
+* 如果 $n$ 是正整数：我们对 $n$ 执行 `2`、 `3`、 `5` 的整除操作即可，直到 $n$ 被除干净，如果 $n$ 最终为 1 说明是丑数，否则不是丑数。
 
-注意，2 3 5 先除哪一个都是可以的，因为乘法本身具有交换律。
+注意，`2` `3` `5` 先除哪一个都是可以的，因为乘法本身具有交换律。
 
 代码：
 ```java
@@ -69,7 +69,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：当 $n$ 是以 2 为底的对数时，需要除以 $log{n}$ 次。复杂度为 $O(log{n})$
+* 时间复杂度：当 $n$ 是以 $2$ 为底的对数时，需要除以 $\log{n}$ 次。复杂度为 $O(\log{n})$
 * 空间复杂度：$O(1)$
 
 ---
