--- a/LeetCode/41-50/42. 接雨水（困难）.md
+++ b/LeetCode/41-50/42. 接雨水（困难）.md
@@ -2,14 +2,12 @@
 
 这是 LeetCode 上的 **[42. 接雨水](https://leetcode-cn.com/problems/trapping-rain-water/solution/po-su-jie-fa-on2-cha-zhao-you-hua-on-dan-iu44/)** ，难度为 **困难**。
 
-Tag : 「单调栈」、「数学」
+Tag : 「模拟」、「单调栈」、「数学」
 
 
 
 
-给定 n 个非负整数表示每个宽度为 1 的柱子的高度图，计算按此排列的柱子，下雨之后能接多少雨水。
-
-
+给定 `n` 个非负整数表示每个宽度为 `1` 的柱子的高度图，计算按此排列的柱子，下雨之后能接多少雨水。
 
 示例 1：
 
@@ -30,9 +28,9 @@ Tag : 「单调栈」、「数学」
 ```
 
 提示：
-* n == height.length
-* 0 <= n <= 3 * $10^4$
-* 0 <= height[i] <= $10^5$
+* $n = height.length$
+* $0 <= n <= 3 * 10^4$
+* $0 <= height[i] <= 10^5$
 
 ---
 
@@ -43,10 +41,6 @@ Tag : 「单调栈」、「数学」
 对左右的最高柱子取一个最小值，再和当前柱子的高度做一个比较，即可得出当前位置可以接下的雨水。
 
 同时，边缘的柱子不可能接到雨水（某一侧没有柱子）。
-
-这样的做法属于「暴力做法」，但题目没有给数据范围，我们无法分析到底能否 AC。
-
-唯唯诺诺交一个，过了 ~ （好题，建议加入蓝桥杯
 
 代码：
 ```Java
@@ -79,7 +73,7 @@ class Solution {
 
 ---
 
-### 预处理最值解法
+### 预处理最值
 
 朴素解法的思路有了，我们想想怎么优化。
 
@@ -140,7 +134,7 @@ class Solution {
 
 ---
 
-### 单调栈解法
+### 单调栈
 
 前面我们讲到，优化思路将问题转化为：**给定一个数组，如何求得任意位置的左半边的最大值和右半边的最大值。**
 
@@ -192,7 +186,7 @@ class Solution {
 
 ---
 
-### 面积差值解法
+### 面积差值
 
 事实上，我们还能利用「面积差值」来进行求解。
 
