--- a/LeetCode/581-590/581. 最短无序连续子数组（中等）.md
+++ b/LeetCode/581-590/581. 最短无序连续子数组（中等）.md
@@ -6,7 +6,7 @@ Tag : 「排序」、「双指针」
 
 
 
-给你一个整数数组 nums ，你需要找出一个 连续子数组 ，如果对这个子数组进行升序排序，那么整个数组都会变为升序排序。
+给你一个整数数组 `nums` ，你需要找出一个 连续子数组 ，如果对这个子数组进行升序排序，那么整个数组都会变为升序排序。
 
 请你找出符合题意的 最短 子数组，并输出它的长度。
 
@@ -32,10 +32,10 @@ Tag : 「排序」、「双指针」
 ```
 
 提示：
-* 1 <= nums.length <= $10^4$
-* -$10^5$ <= nums[i] <= $10^5$
+* $1 <= nums.length <= 10^4$
+* $-10^5 <= nums[i] <= 10^5$
 
-* 进阶：你可以设计一个时间复杂度为 O(n) 的解决方案吗？
+* 进阶：你可以设计一个时间复杂度为 $O(n)$ 的解决方案吗？
 
 ---
 
